@startuml Entity_Relation_Diagram_Wissenstest
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml

title Entity-Relation-Diagramm - Projekt Wissenstest

' Definition der Entities mit Attributen

entity "users" as USERS {
  *id : SERIAL [PK]
  --
  username : VARCHAR(100) [UNIQUE, NOT NULL]
  email : VARCHAR(255) [UNIQUE]
  password_hash : VARCHAR(256) [NOT NULL]
  password_salt : VARCHAR(128) [NOT NULL]
  role : VARCHAR(32) [DEFAULT: 'student']
  reset_requested : BOOLEAN [DEFAULT: FALSE]
  created_at : TIMESTAMP WITH TIME ZONE [DEFAULT: now()]
}

entity "questions" as QUESTIONS {
  *id : SERIAL [PK]
  --
  type : VARCHAR(16) [CHECK: 'MC','CLOZE','FREE','IMAGE']
  prompt : TEXT [NOT NULL]
  difficulty : SMALLINT [CHECK: 1,2,3]
  points : INTEGER [DEFAULT: 1]
  category : VARCHAR(64) [DEFAULT: 'Allgemein']
  image_url : VARCHAR(255)
  meta : JSONB [DEFAULT: {}]
  created_by : INTEGER [FK -> users.id]
  created_at : TIMESTAMP WITH TIME ZONE [DEFAULT: now()]
}

entity "question_images" as QUESTION_IMAGES {
  *id : SERIAL [PK]
  --
  content_type : VARCHAR(128) [NOT NULL]
  data : BYTEA [NOT NULL]
  created_at : TIMESTAMP WITH TIME ZONE [DEFAULT: now()]
}

entity "answers" as ANSWERS {
  *id : SERIAL [PK]
  --
  question_id : INTEGER [FK -> questions.id]
  answer_text : TEXT [NOT NULL]
  is_correct : BOOLEAN [DEFAULT: FALSE]
  partial_value : NUMERIC(5,4) [DEFAULT: 0.0, CHECK: 0-1]
}

entity "cloze_answers" as CLOZE_ANSWERS {
  *id : SERIAL [PK]
  --
  question_id : INTEGER [FK -> questions.id]
  token_index : SMALLINT [NOT NULL]
  expected_text : TEXT [NOT NULL]
  partial_value : NUMERIC(5,4) [DEFAULT: 1.0, CHECK: 0-1]
}

entity "attempts" as ATTEMPTS {
  *id : SERIAL [PK]
  --
  user_id : INTEGER [FK -> users.id]
  total_points : NUMERIC(8,4) [DEFAULT: 0.0]
  max_points : NUMERIC(8,4) [DEFAULT: 0.0]
  difficulty : SMALLINT [CHECK: 1,2,3]
  grade : VARCHAR(10)
  duration_seconds : INTEGER [DEFAULT: 0]
  created_at : TIMESTAMP WITH TIME ZONE [DEFAULT: now()]
}

entity "attempt_answers" as ATTEMPT_ANSWERS {
  *id : SERIAL [PK]
  --
  attempt_id : INTEGER [FK -> attempts.id]
  question_id : INTEGER [FK -> questions.id]
  given_answer : TEXT
  points_awarded : NUMERIC(8,4) [DEFAULT: 0.0]
}

entity "config" as CONFIG {
  *key : VARCHAR(128) [PK]
  --
  value : VARCHAR(255) [NOT NULL]
  description : TEXT
}

' Beziehungen zwischen den Entities

USERS ||--o{ QUESTIONS : "creates"
USERS ||--o{ ATTEMPTS : "performs"
QUESTIONS ||--o{ ANSWERS : "has"
QUESTIONS ||--o{ CLOZE_ANSWERS : "has"
QUESTIONS ||--o{ ATTEMPT_ANSWERS : "answered_in"
ATTEMPTS ||--o{ ATTEMPT_ANSWERS : "contains"

' Zusätzliche Notizen

note right of USERS
  **Rollen:**
  - 'student': Normaler Benutzer
  - 'teacher'/'admin': Administratoren
  
  **Passwort:**
  - Gehashed mit Salt
  - reset_requested für PW-Reset-Flow
end note

note right of QUESTIONS
  **Fragetypen:**
  - MC: Multiple Choice
  - CLOZE: Lückentext
  - FREE: Freitext (optional)
  - IMAGE: Mit Bild
  
  **Schwierigkeit:** 1-3
  - 1 = Leicht
  - 2 = Mittel
  - 3 = Schwer
end note

note right of ANSWERS
  **Multiple-Choice-Antworten:**
  - is_correct: Korrekt/Falsch
  - partial_value: Für
    Teilpunkte (0.0-1.0)
  
  **Beispiel:**
  - Antwort 1: is_correct=TRUE
  - Antwort 2: is_correct=FALSE
end note

note right of CLOZE_ANSWERS
  **Lückentext-Tokens:**
  - token_index: Position
    in der Lücke
  - expected_text: Erwartete
    Antwort
  - partial_value: Gewichtung
end note

note right of ATTEMPTS
  **Testversuch:**
  - Speichert Gesamtpunkte
  - Maximal erreichbare Punkte
  - Berechnete Note (1-6)
  - Dauer in Sekunden
  
  **Schwierigkeit:**
  Startlevel des Tests
end note

note right of ATTEMPT_ANSWERS
  **Antwort-Details:**
  - Verknüpft Versuch mit
    einzelner Frage
  - Gespeicherte Antwort
  - Erreichte Punkte
  
  **Verwendung:**
  Detailliertes Feedback
end note

note right of CONFIG
  **System-Konfiguration:**
  
  - progress.promote_threshold
    (z.B. 0.70)
  - progress.demote_threshold
    (z.B. 0.40)
  - progress.window_size
    (z.B. 3)
end note

' Indizes für Performance
note bottom of QUESTIONS
  **Wichtige Indizes:**
  - idx_questions_difficulty ON difficulty
  - idx_attempts_user ON user_id
end note

@enduml
